Jumping menu fix, underline on current item fix. Fixes #21
Quite a few menu fixes, jumping menu and dropdown items fixed.

The famous underline on current selected items is also taken care off

Default look for current item if in sub-menu is now gone.

--- a/wp-content/themes/aaf/css/style.css
+++ b/wp-content/themes/aaf/css/style.css
@@ -183,7 +183,7 @@ p {
   height: 0;
 }
 .site-header #navigation li:hover {
-  background: #fff;
+
 }
 .site-header #navigation li:hover a {
   text-shadow: none;
